--- a/posmotri-v-okno-fd-main/styles/style.css
+++ b/posmotri-v-okno-fd-main/styles/style.css
@@ -33,22 +33,19 @@ fieldset {
   padding: 0;
 }
 
-h2 {
-  text-overflow: ellipsis;
-  overflow: hidden;
-  white-space: nowrap;
-}
-
 p {
   display: -webkit-box;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;  
-  overflow: hidden;
 }
 
 ul,
 ol {
   list-style: none;
+}
+
+input {
+  appearance: none;
 }
 
 .visually-hidden {
@@ -64,7 +61,6 @@ ol {
 .content {
   display: grid;
   grid-template-columns: 741px 399px;
-  grid-template-rows: 534px;
   grid-template-areas: "result content__details";             
   margin: auto;
 }
@@ -77,13 +73,16 @@ ol {
 }
 
 .result__video-container {
-  min-width: 711px;
-  max-height: 386px;
+  position: relative;
+  max-width: 711px;
+  min-height: 386px;
 }
 
 .result__video {
+  display: flex;
+  position: absolute;
   width: 100%;
-  max-height: 385px;
+  height: 100%;
   object-fit: cover;
   object-position: center;
 }
@@ -92,20 +91,18 @@ ol {
   grid-area: content__details;
   width: 100%;
   height: 100%;
-  gap: 26px;
-  opacity: 0px; 
 }
 
 .title {
   max-width: 259px;
   min-height: 210px;
-  font-family: 'Oswald';
+  font-family: 'Oswald', Regular;
   font-style: normal;
   font-weight: 700;
   font-size: 75px;
   line-height: 94%;
   text-transform: uppercase;
-  padding-bottom: 26px;
+  padding-bottom: 24px; 
 }
 
 .content__accent {
@@ -124,12 +121,26 @@ ol {
   flex-direction: column;
   max-height: 298px;
   position: relative;
-  overflow-y: scroll;
+  overflow-y: auto;
+  padding-left: 3px;
   padding-top: 2px;
 }
 
 .content__list-item:focus {
   outline: 1px solid #ffffff;
+}
+
+.content__card-link {
+  display: flex;
+  text-decoration: none;
+}
+
+.content__card-link_current {
+  background-color: #545050;
+}
+
+.content__card-link_current:focus {
+  background-color: #545050;
 }
 
 .content__video-card {
@@ -138,11 +149,6 @@ ol {
   justify-content: space-between;
   min-width: 390px;
   max-height: 502px;
-  margin-left: 3px;
-}
-
-.content__video-card:active {
-  background: #545050;
 }
 
 .content__video-card:hover {
@@ -166,7 +172,7 @@ ol {
 }
 
 .content__video-card-title {
-  font-family: 'Oswald';
+  font-family: 'Oswald', Regular;
   font-style: normal;
   font-weight: 700;
   font-size: 30px;
@@ -174,20 +180,19 @@ ol {
   text-transform: uppercase;
   color: #FFFFFF;
   max-width: 196px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .content__video-card-description {
-font-family: 'Fira Sans Condensed';
+font-family: 'Fira Sans Condensed', sans-serif;
 font-style: normal;
 font-weight: 400;
 font-size: 18px;
 line-height: 16px;
 color: #FFFFFF;
 padding-top: 6px;
-}
-
-.content__card-link {
-  text-decoration: none;
 }
 
 .search-form {
@@ -206,7 +211,7 @@ padding-top: 6px;
 }
 
 .search-form__fieldset-title {
-  font-family: 'Fira Sans Condensed';
+  font-family: 'Fira Sans Condensed', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -219,6 +224,7 @@ padding-top: 6px;
   display: flex;
   width: fit-content;
   align-items: center;
+  cursor: pointer; 
 }
 
 .search-form__label:has(:focus-visible) {
@@ -236,7 +242,7 @@ padding-top: 6px;
 
 .search-form__label-text:hover::before {
   content:"";
-  position: absolute;
+  position: fixed;
   width: 28px;
   height: 30px;
   cursor: pointer; 
@@ -247,13 +253,13 @@ padding-top: 6px;
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding: 0px;
+  padding: 0;
   min-width: 225px;
   border-width: 1px 0px;
   border-style: solid;
   border-color: #FFFFFF;
   background-color: transparent;
-  font-family: 'Fira Sans Condensed';
+  font-family: 'Fira Sans Condensed', sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -276,14 +282,10 @@ padding-top: 6px;
   outline: none;
 }
   
-.search-form__label:has(:focus-visible) {
-  outline: 1px solid #ffffff;
-  outline-offset: 2px;
-}
-
 .search-form__checkbox-list {
   display: flex;
   gap: 15px;
+  margin-bottom: 3px;
 }
 
 .search-form__pseudo-checkbox {
@@ -292,8 +294,7 @@ padding-top: 6px;
   justify-content: center; 
   width: 19px;
   height: 19px;
-  border: 1px solid #ffffff;
-  
+  border: 1px solid #ffffff;  
 }
 
 .search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
@@ -306,7 +307,7 @@ padding-top: 6px;
 .button {
   min-width: 194px;
   min-height: 34px;
-  font-family: Fira Sans Condensed;
+  font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   font-weight: 700;
   line-height: 21.6px;
@@ -325,7 +326,8 @@ padding-top: 6px;
 }
 
 .button:active {
-  background: #545050; }
+  background: #545050; 
+}
 
 .button:focus {
   outline: none;
